--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,5 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
 
     implementation 'com.squareup.picasso:picasso:2.71828'
-
+    implementation 'jp.wasabeef:picasso-transformations:2.2.1'
 }
